# serialized_class

./: CMakeLists.txt  readme.md
src/Test/: test_data.cpp  test_data.h
src/data/: field.h  field_base.h  serialized_class_base.cpp  serialized_class_base.h
